--- a/NumeronAI/NumeronAI/NumeronAI.csproj
+++ b/NumeronAI/NumeronAI/NumeronAI.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="AI\AhoKun.cs" />
     <Compile Include="AI\Kakushigo1go.cs" />
+    <Compile Include="AI\MinmindahaKun.cs" />
     <Compile Include="AI\SorenariKazukiKun.cs" />
     <Compile Include="AI\SorenariKun.cs" />
     <Compile Include="Form1.cs">
